fix: styles and remove overflow

--- a/src/assets/styles/global.css
+++ b/src/assets/styles/global.css
@@ -1,5 +1,6 @@
 :root {
   font-size: 60%;
+  overflow: hidden;
 }
 * {
   margin: 0;
